Extend Spring integration
Autoconfigure now scans for entities/DTO mappings if configured to do so
Add LitebridgeConfigurer interface to simplify programmatic registration
Fixed MethodHandles.lookup() issues in Spring integration
Fixed issue with entites that are records where fields/methods conflicted in the AnnotationMapper